# openprints

./:    .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILLS.md
apps/indexer/: TODO.md  openprints.indexer.toml  openprints.indexer.toml.example  openprints.toml.example  pyproject.toml
apps/indexer/openprints/: __init__.py  __main__.py
apps/indexer/openprints/api/: __init__.py  app.py  deps.py  design_id.py  schemas.py
apps/indexer/openprints/cli/: __init__.py  main.py
apps/indexer/openprints/common/: __init__.py  config.py  design_event_schema.py  design_id.py  error_codes.py  errors.py  event_filter.py  event_types.py  event_utils.py  event_validation.py  identity_utils.py  payload_contract.py  relay_protocol.py  (+1 more)
apps/indexer/openprints_cli/: __init__.py  errors.py  event_utils.py  main.py  payload_contract.py
apps/indexer/tests/: test_api.py  test_build_command.py  test_cli.py  test_common_design_event_schema.py  test_common_design_id.py  test_common_event_filter.py  test_db_stats.py  test_db_wipe.py  test_event_utils.py  test_hash_command.py  test_health_checks.py  test_health_server.py  test_helpers.py  test_identity_indexer.py  test_index_command.py  test_indexer_config.py  test_indexer_coordinator.py  test_indexer_reducer.py  test_indexer_relay_worker.py  test_indexer_store_sqlite.py  test_keygen_command.py  test_logging.py  test_main.py  test_payload_contract.py  test_publish_command.py  test_serve_command.py  test_sign_command.py  test_subscribe_command.py  test_watchdog_command.py
(+210 files in other folders)
