[project]
name = "openprints-indexer"
version = "0.1.0"
description = "OpenPrints indexer and CLI tools"
requires-python = ">=3.11"
dependencies = [
  "bech32>=1.2.0",
  "coincurve>=20.0.0",
  "websockets>=12.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
openprints-cli = "openprints.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["openprints"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
